<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tank1"
        android:textSize="40sp"
        android:textColor="@color/color3"
        android:layout_marginTop="20sp"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:id="@+id/image1"
        tools:src="@drawable/image1"
        android:layout_below="@id/txt1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image1"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn1"
            android:text="@string/tank1ans1"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn2"
            android:text="@string/tank1ans2"
            android:layout_weight="1"
            />

    </LinearLayout>

</RelativeLayout>