<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activ1">

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tank2"
        android:textSize="40sp"
        android:textColor="@color/color3"
        android:layout_marginTop="20sp"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:id="@+id/image2"
        tools:src="@drawable/image2"
        android:layout_below="@id/txt2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image2"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn3"
            android:text="@string/tank2ans1"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn4"
            android:text="@string/tank2ans2"
            android:layout_weight="1"
            />

    </LinearLayout>

</RelativeLayout>